# cljrs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: mojo-check.yml  pages.yml
bench/: clj_bench.clj  cond_chain.clj  cond_chain_native.clj  fib.clj  fib_native.clj  jank_bench.clj  kernels.sh  loop_sum.clj  loop_sum_native.clj  numpy_kernels.py  run.sh
bench/clojo_logreg/: kernels.clj  kernels.mojo.optimized  prepare_data.py  run.sh
bench/gpu/: sincos_numpy.py  sincos_pytorch.py
bench/kernels/: dot.clj
bench/kernels_mojo/: driver.mojo  run.mojo  src.mojo.max  src.mojo.readable
crates/cljrs-bindgen/: Cargo.toml
crates/cljrs-bindgen/examples/: rand.toml
crates/cljrs-bindgen/examples/expected/: rand_install.rs
crates/cljrs-bindgen/src/: codegen.rs  lib.rs  main.rs  manifest.rs
crates/cljrs-bindgen/tests/: golden.rs
crates/cljrs-ml/: Cargo.toml
crates/cljrs-ml/src/: autograd.rs  gpu.rs  lib.rs
crates/cljrs-ml/tests/: ml.rs  page_smoke.rs
crates/cljrs-mojo/: Cargo.toml
crates/cljrs-mojo/src/: ast.rs  lib.rs  runtime.rs  tier1.rs  tier2.rs  tier3.rs
crates/cljrs-mojo/tests/: demo_smoke.rs  error_locations.rs  features.rs  goldens.rs  internal.rs  no_double_parens.rs  vectorize.rs
crates/cljrs-mojo/tests/goldens/: abs_max.clj  abs_max.mojo.max  abs_max.mojo.optimized  abs_max.mojo.readable  add.clj  add.mojo.max  add.mojo.optimized  add.mojo.readable  clamp.clj  clamp.mojo.max  clamp.mojo.optimized  clamp.mojo.readable  cond_classify.clj  cond_classify.mojo.max  cond_classify.mojo.optimized  cond_classify.mojo.readable  factorial_loop.clj  factorial_loop.mojo.max  factorial_loop.mojo.optimized  factorial_loop.mojo.readable  hello.clj  hello.mojo.max  hello.mojo.optimized  hello.mojo.readable  lerp.clj  lerp.mojo.max  lerp.mojo.optimized  lerp.mojo.readable  rsqrt.clj  rsqrt.mojo.max  rsqrt.mojo.optimized  rsqrt.mojo.readable  smoothstep.clj  smoothstep.mojo.max  smoothstep.mojo.optimized  smoothstep.mojo.readable  sphere_sdf.clj  sphere_sdf.mojo.max  sphere_sdf.mojo.optimized  sphere_sdf.mojo.readable
crates/cljrs-physics/: Cargo.toml
crates/cljrs-physics/src/: d2.rs  d3.rs  lib.rs
crates/cljrs-physics/tests/: demos.rs  smoke.rs
crates/cljrs-wasm/: Cargo.toml
crates/cljrs-wasm/src/: js_bridge.rs  lib.rs  ui_bridge.rs
demo/: burning_ship.clj  charges.clj  clifford.clj  domain_warp.clj  double_pendulum.clj  fractal.clj  julia.clj  kaleidoscope.clj  lorenz.clj  metaballs.clj  moire.clj  newton.clj  phyllotaxis.clj  plasma.clj  rasterizer.clj  raymarch.clj  raytrace.clj  sdf_scene.clj  truchet.clj  voronoi.clj  waves.clj
demo_gpu/: clouds.clj  flowfield.clj  mandelbrot.clj  plasma.clj
docs/: _gpu_runner.js  _header.html  _highlight.js  _layout.js  _runnable.js  _ui.js  bench.html  benchmarks.html  bindgen.html  build-ui.sh  build.sh  clojo-ml.html  clojo.html  coverage.html  demos.html  gpu-web.html  index.html  js-interop.html  kernels.html  lib-core.html  lib-js.html  lib-ml.html  lib-music.html  lib-rust.html  lib-shader.html  lib-ui.html  library.html  life.html  ml.html  physics.html  platformer.html  repl.html  roadmap.html  sequencer.cljrs  sequencer.html  serve.sh  style.css  syntax.html  synth.cljrs  synth.html  (+2 more)
docs/bench-kernels/: mojo.optimized.mojo  mojo.readable.mojo  results.json  saxpy.clj  src_mojo.clj  sum_sq.clj  vector_add.clj
docs/clojo-ml/: kernels.mojo.max  kernels.mojo.readable  results.json  train.mojo
docs/kernels/: raymarch3d.clj  raytrace.clj  stdlib.clj  waves.clj
docs/wgsl/: clouds.wgsl  clouds_inline.wgsl  flowfield.wgsl  flowfield_inline.wgsl  mandelbrot.wgsl  mandelbrot_inline.wgsl  plasma.wgsl  plasma_inline.wgsl  raymarch3d.wgsl  raymarch3d_inline.wgsl  raytrace.wgsl  raytrace_inline.wgsl  waves.wgsl  waves_inline.wgsl
editor/: README.md
editor/nvim-cljrs/: README.md
editor/nvim-cljrs/ftdetect/: cljrs.vim
editor/nvim-cljrs/lua/nvim-cljrs/: init.lua
editor/nvim-cljrs/queries/cljrs/: highlights.scm
editor/tree-sitter-cljrs/: .gitignore  README.md  grammar.js  package.json
editor/tree-sitter-cljrs/queries/: highlights.scm
editor/vscode-cljrs/: README.md  language-configuration.json  package.json
editor/vscode-cljrs/syntaxes/: cljrs.tmLanguage.json
src/: builtins.rs  cljrs_edn.clj  cljrs_music.clj  cljrs_set.clj  cljrs_string.clj  cljrs_test.clj  cljrs_ui.clj  cljrs_walk.clj  core.clj  env.rs  error.rs  eval.rs  lib.rs  main.rs  native.rs  reader.rs  types.rs  value.rs
src/codegen/: mod.rs
src/codegen/mlir/: compile.rs  emit.rs  mod.rs
src/gpu/: emit.rs  mod.rs
tests/: buffer_abi.rs  builtins.rs  call_floats.rs  cljrs_music.rs  cljrs_string.rs  cljrs_test.rs  cljrs_ui.rs  clojure_control_flow.rs  clojure_hierarchy.rs  clojure_set.rs  clojure_walk.rs  core_clj.rs  coverage_push.rs  defn_gpu.rs  defn_native.rs  defonce.rs  destructuring.rs  ergonomics.rs  error_locations.rs  eval_basic.rs  gensym.rs  gpu_pixel.rs  hamt.rs  lazy_seqs.rs  loop_recur.rs  macros.rs  multi_arity.rs  multimethods.rs  namespaces.rs  page_sources.rs  platformer.rs  platformer_timeline.rs  prelude_macros.rs  protocols.rs  ratios.rs  regex.rs  state_and_exceptions.rs  stdlib.rs  stdlib_audit.rs  stdlib_edge_cases.rs  (+4 more)
tools/coverage/: audit_report.md  build.sh  clojure_core.txt  clojure_edn.txt  clojure_string.txt  generate.py  not_applicable.txt
tools/mojo-check/: README.md  error_locations.md  error_locations.patch  run-local.sh
