[package]
name = "cljrs"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Opt-in native codegen via MLIR + LLVM 22. Not default until stable.
# Build/test with `cargo build --features mlir` / `cargo test --features mlir`.
mlir = ["dep:melior"]
# Windowed live-coded demo (src/bin/demo.rs). Off by default so CI
# without a display can still build cleanly.
demo = ["mlir", "dep:eframe", "dep:rayon"]

[dependencies]
# imbl = maintained fork of im. Production-quality persistent HAMT
# collections (Vector, HashMap, HashSet) backing Value::Vector/Map/Set.
# Hand-rolling these is a multi-thousand-line project; imbl is battle-
# tested, dependency-light, and matches Clojure's semantics closely.
imbl = "3"
melior = { version = "0.27", optional = true }
# Demo window + UI: eframe bundles egui + winit + a renderer; gives us
# real sliders for live-coded params without hand-rolling widgets.
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "glow"] }
# Data-parallelism for the demo's pixel loop.
rayon = { version = "1", optional = true }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["demo"]

[profile.release]
lto = "fat"
codegen-units = 1
