[workspace]
members = [".", "crates/cljrs-wasm", "crates/cljrs-physics", "crates/cljrs-ml", "crates/cljrs-bindgen", "crates/cljrs-mojo"]

[package]
name = "cljrs"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/tytrdev/cljrs"
description = "Clojure dialect implemented from scratch in Rust, with MLIR/LLVM native codegen and a GPU compute path."

[features]
default = []
# Opt-in native codegen via MLIR + LLVM 22. Not default until stable.
# Build/test with `cargo build --features mlir` / `cargo test --features mlir`.
mlir = ["dep:melior"]
# Windowed live-coded demo (src/bin/demo.rs). Off by default so CI
# without a display can still build cleanly.
demo = ["mlir", "dep:eframe", "dep:rayon"]
# GPU compute via wgpu. Works natively (Metal/Vulkan/DX12) and in the
# browser via WebGPU. Kernels are compiled from cljrs forms to WGSL.
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
# GPU live-coded demo binary. Needs both the GPU path and eframe.
gpu-demo = ["gpu", "dep:eframe"]

[dependencies]
# imbl = maintained fork of im. Production-quality persistent HAMT
# collections (Vector, HashMap, HashSet) backing Value::Vector/Map/Set.
# Hand-rolling these is a multi-thousand-line project; imbl is battle-
# tested, dependency-light, and matches Clojure's semantics closely.
imbl = "3"
regex = "1"
melior = { version = "0.27", optional = true }
# Demo window + UI: eframe bundles egui + winit + a renderer; gives us
# real sliders for live-coded params without hand-rolling widgets.
eframe = { version = "0.31", optional = true, default-features = false, features = ["default_fonts", "glow"] }
# Data-parallelism for the demo's pixel loop.
rayon = { version = "1", optional = true }
# GPU compute. wgpu = the cross-platform (Metal/Vulkan/DX12/WebGPU)
# graphics+compute abstraction used by Bevy, Deno, etc. pollster =
# single-thread futures::block_on replacement so we don't drag in a
# full async runtime. bytemuck = safe [T] ↔ [u8] casts for buffer IO.
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
# Used by tests/page_sources.rs to evaluate every demo page's embedded
# cljrs source, catching missing builtins / bad references before they
# reach a browser.
cljrs-physics = { path = "crates/cljrs-physics" }
cljrs-ml = { path = "crates/cljrs-ml" }

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "bench-kernels"
path = "src/bin/bench_kernels.rs"
required-features = ["mlir"]

[[bin]]
name = "prerender"
path = "src/bin/prerender.rs"

[[bin]]
name = "demo"
path = "src/bin/demo.rs"
required-features = ["demo"]

[[bin]]
name = "record"
path = "src/bin/record.rs"
required-features = ["demo"]

[[bin]]
name = "gpu-demo"
path = "src/bin/gpu_demo.rs"
required-features = ["gpu-demo"]

[[bin]]
name = "gpu-record"
path = "src/bin/gpu_record.rs"
required-features = ["gpu-demo"]

[[bin]]
name = "gpu-compile"
path = "src/bin/gpu_compile.rs"
required-features = ["gpu"]

[[bin]]
name = "gpu-bench"
path = "src/bin/gpu_bench.rs"
required-features = ["gpu"]

[profile.release]
lto = "fat"
codegen-units = 1
